--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo+Play:wght@500&family=Cairo:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>نظام إدارة الجودة أيزو 9001-2015 من رسالة الدكتوراة للدكتور/ حاتم لطفي</title>
     <style>
         /* اتجاه النص والعناصر اليميني (RTL) */
         html, body {
             direction: rtl;
             text-align: right;
+            font-family: 'Cairo', sans-serif;
+            font-size: 25px;
         }
 
         /* تنسيق العائلة باستخدام قائمة غير مرتبة */
