--- a/index.html
+++ b/index.html
@@ -5,66 +5,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo+Play:wght@500&family=Cairo:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>نظام إدارة الجودة أيزو 9001-2015 من رسالة الدكتوراة للدكتور/ حاتم لطفي</title>
-    <style>
-        /* اتجاه النص والعناصر اليميني (RTL) */
-        html, body {
-            direction: rtl;
-            text-align: right;
-            font-family: 'Cairo', sans-serif;
-            font-size: 25px;
-        }
-
-        /* تنسيق العائلة باستخدام قائمة غير مرتبة */
-        .family-tree {
-            list-style-type: none;
-            padding-left: 0;
-        }
-
-        .person {
-            border: 1px solid #000;
-            margin: 10px;
-            padding: 10px;
-            position: relative;
-        }
-
-        .person .name {
-            font-weight: bold;
-        }
-
-        /*head data*/
-        .headdata {
-            font-weight: bold;
-            text-align: center;
-        }
-        .person .spouse::before {
-            content: " ";
-        }
-
-        /* الأطفال مخفيين افتراضيًا */
-        .children {
-            display: none;
-        }
-
-        /* تمتد الأطفال عندما يتم تحديد الصندوق (checkbox) */
-        input[type="checkbox"]:checked ~ .children {
-            display: block;
-        }
-
-        /* تمثيل علامة التبديل */
-        label.toggle-button {
-            cursor: pointer;
-            color: blue;
-            position: absolute;
-            top: 0;
-            right: 0;
-            padding: 5px;
-        }
-        img{
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+    
 </head>
 <body>
     <div class="headdata">الفصل الثالث<br>نظام إدارة الجودة أيزو 9001-2015<br>من رسالة الدكتوراة<br>للدكتور/ حاتم لطفي</div>
