--- a/1.html
+++ b/1.html
@@ -57,20 +57,32 @@
         <li class="person">
             <input type="checkbox" id="grandfather">
             <label class="toggle-button" for="grandfather">+</label>
-            <div class="name">جد الأب</div>
-            <div class="spouse">جدة الأب</div>
+            <div class="name">
+                جد الأب
+            </div>
+            <div class="spouse">
+                جدة الأب
+            </div>
             <ul class="children">
                 <li class="person">
                     <input type="checkbox" id="father">
                     <label class="toggle-button" for="father">+</label>
-                    <div class="name">الأب</div>
-                    <div class="spouse">الأم</div>
+                    <div class="name">
+                        الأب
+                    </div>
+                    <div class="spouse">
+                        الأم
+                    </div>
                     <ul class="children">
                         <li class="person">
-                            <div class="name">الطفل 1</div>
+                            <div class="name">
+                                الطفل 
+                            </div>
                         </li>
                         <li class="person">
-                            <div class="name">الطفل 2</div>
+                            <div class="name">
+                                الطفل 
+                            </div>
                         </li>
                     </ul>
                 </li>
