--- a/index.html
+++ b/index.html
@@ -22,6 +22,33 @@
     <ul class="family-tree">
         <li class="person">
             <div class="name">
+                <a href="chapter2.html">الفصل الثاني :الأيزو ونظام إدارة الجودة</a>
+            </div>
+            <div class="spouse">
+            </div>
+            <ul class="children">
+                <li class="person">
+                    <input type="checkbox" id="father">
+                    <label class="toggle-button" for="father">+</label>
+                    <div class="name">
+                    </div>
+                    <div class="spouse">
+                    </div>
+                    <ul class="children">
+                        <li class="person">
+                            <div class="name">
+                            </div>
+                        </li>
+                        <li class="person">
+                            <div class="name">
+                            </div>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li class="person">
+            <div class="name">
                 <a href="chapter3.html">الفصل الثالث: نظام إدارة الجودة أيزو 9001-2015</a>
             </div>
             <div class="spouse">
@@ -49,7 +76,7 @@
         </li>
         <li class="person">
             <div class="name">
-                <a href="chapter4.html">الفصل الثالث: نظام إدارة الجودة أيزو 9001-الفصل الرابع: إدارة الجودة وتحقيق النجاح المستدام للمنظمات وفق أيزو 9004-2018</a>
+                <a href="chapter4.html">الفصل الرابع: إدارة الجودة وتحقيق النجاح المستدام للمنظمات وفق أيزو 9004-2018</a>
             </div>
             <div class="spouse">
             </div>
