--- a/index.html
+++ b/index.html
@@ -13,8 +13,22 @@
     </style>
 </head>
 <body>
+    <div class="logo">
+        <img  src="logo.jpg" >
+    </div>
     <div class="type">
-        تحديد مستوى نضج نظام إدارة الجودة أيزو 9001-2015<br>وفق أيزو 9004-2018<br>لتحسين الأداء المؤسسي
+        <br>
+        من رسالة الدكتوراة
+        <br>
+        دكتور حاتم لطفي
+        <br>
+        <br>
+        تحديد مستوى نضج نظام إدارة الجودة أيزو 9001-2015
+        <br>
+        وفق أيزو 
+        9004-2018
+        <br>
+        لتحسين الأداء المؤسسي
     </div>
     <p class="type2">
         دراسة تطبيقية<br>على مجموعة من المنظمات السعودية المُطبقة لنظام أيزو  9001-2015
