--- a/1.html
+++ b/1.html
@@ -91,3 +91,13 @@
     </ul>
 </body>
 </html>
+
+
+<table border="1">
+    <tr>
+        <th></th>
+    </tr>
+    <tr>
+        <td></td>
+    </tr>
+</table>
