--- a/SD.html
+++ b/SD.html
@@ -23,7 +23,7 @@
             <span class="redtitle">جمع وترتيب محمد درويش</span>
         <br>
         <br>
-        عضو مبادرة صدارة الجودة والتميز عالمياً - رياديون
+        عضو اللجنة التنظيمية - مبادرة صدارة الجودة والتميز عالمياً - رياديون
         <br>
     </div>
     <ul class="family-tree">
