--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="logo">
-        <img  src="logo.jpg" >
+        <img  src="logo.png" >
     </div>
     <div class="type">
         <br>
