--- a/iso-9001-2015.html
+++ b/iso-9001-2015.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     <div class="logo">
-        <img  src="logo.png" >
+        <img class="dr" src="DrHatemLogo.png">
+        <img  class="Pio" src="logo.png" >
     </div>
     <div class="headdata">
         المواصفة القياسية الدولية - أيزو 9001-2015
