--- a/iso-9001-2015.html
+++ b/iso-9001-2015.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Cairo+Play:wght@500&family=Cairo:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styleM.css">
     <title>
-
+        المواصفة القياسية الدولية - أيزو 9001-2015
+        نظام إدارة الجودة – المُتطلبات
     </title>
-    
 </head>
 <body>
     <div class="logo">
@@ -44,6 +45,9 @@
         <li class="person">
             <input type="checkbox" id="grandfather">
             <label class="toggle-button" for="grandfather">
+                <!-- <span class="material-symbols-outlined">
+                    arrow_forward_ios
+                </span> -->
                 1- المجال
             </label>
             <ul class="children">
