--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo+Play:wght@500&family=Cairo:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styleM.css">
     <title>
         تحديد مستوى نضج نظام إدارة الجودة أيزو 9001-2015 وفق أيزو 9004-2018 لتحسين الأداء المؤسسي
     </title>
@@ -14,14 +14,14 @@
 </head>
 <body>
     <div class="logo">
-        <img  src="logo.png" >
+        <img class="dr" src="DrHatemLogo.png">
+        <img  class="Pio" src="logo.png" >
     </div>
     <div class="type">
         <br>
         من رسالة الدكتوراة
         <br>
-        دكتور حاتم لطفي
-        <br>
+        دكتور/<span class="redtitle">حاتم لطفي</span>&nbsp; 
         <br>
         تحديد مستوى نضج نظام إدارة الجودة أيزو 9001-2015
         <br>
